--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -41,6 +41,7 @@
   --color-sidebar-ring: var(--sidebar-ring);
   --color-bg-dark: #111111;
   --color-primary-1: #F3652F;
+  --color-secondary: #242424;
 }
 
 :root {
@@ -117,6 +118,9 @@
     @apply border-border outline-ring/50 p-0 m-0;
     box-sizing: border-box;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   body {
     @apply bg-bg-dark text-foreground;
     font-family: "Roboto", sans-serif;
@@ -130,4 +134,19 @@
   .wrapper {
     @apply container px-3.5 m-auto transition
   }
+
+  .scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-primary-1) transparent;
+  }
+  .scrollbar::-webkit-scrollbar {
+    width: 8px; height: 8px;
+  }
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: var(--color-primary-1); border-radius: 9999px;
+  }
+  .scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
 }
